version 0.2: (TBA)
	* First implementation of the stable APIs on top of swig.